<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_addItem"
            android:visible="false"
            android:title="@string/menu_add_item" />
        <item
            android:id="@+id/nav_cheese"
            android:title="@string/menu_cheese" />
        <item
            android:id="@+id/nav_wine"
            android:title="@string/menu_wine" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_logOut"
            android:title="@string/menu_logOut" />
    </group>




</menu>
